# agent-font-patcher

./: .gitignore  NOTICE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: agent-svg-checklist.md  asset-sources.md  brainstorm.md  codepoints.md  decisions.md  font-cache.md  release.md
docs/references/: claude-share.md
glyphs/: README.md
src/agent_font_patcher/: __init__.py  cli.py  font_cache.py  inspector.py  manifest.py  patcher.py  scanner.py  specimen.py
src/agent_font_patcher/data/: __init__.py  codepoints.json
tests/: __init__.py  test_font_cache.py  test_inspector.py  test_manifest.py  test_patcher.py  test_scanner.py  test_specimen.py
