[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-font-patcher"
version = "0.1.0"
description = "Patch Nerd Fonts-compatible fonts with modern agent tooling glyphs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "defusedxml>=0.7.1",
  "fonttools>=4.53",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "ruff>=0.11",
]

[project.scripts]
agent-font-patcher = "agent_font_patcher.cli:main"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_font_patcher = ["data/*.json"]
