[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-font-patcher"
version = "0.1.0"
description = "Patch Nerd Fonts-compatible fonts with modern agent tooling glyphs."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT AND Apache-2.0 AND CC-BY-4.0"
license-files = ["LICENSE", "NOTICE.md", "LICENSES/*.txt"]
authors = [
  {name = "Aurokin"},
]
dependencies = [
  "defusedxml>=0.7.1",
  "fonttools>=4.53",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Text Processing :: Fonts",
  "Topic :: Utilities",
]

[project.urls]
Repository = "https://github.com/aurokin/nerd-font-patcher"
Issues = "https://github.com/aurokin/nerd-font-patcher/issues"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "ruff>=0.11",
]

[project.scripts]
agent-font-patcher = "agent_font_patcher.cli:main"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_font_patcher = ["data/*.json", "data/assets/agents/*.svg"]
